Pages are ready

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,9 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+// Blog Template
+@import "blog.scss";
+
+// Other template stylesheet file
+@import "other.scss";
